css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Style+Script&display=swap');

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
}

section.school {
    background-image: url('../img/Entrance_to_Inglemoor_High_School.webp');
    background-position: center top;
    background-size: 100% auto;
    background-repeat: no-repeat;
    display: grid;
    place-items: center;
}

section.pine {
    background-image: url('../img/pine-needles-small.jpg');
    background-repeat: repeat;
    background-size: 100px 150px;
    display: grid;
    place-items: center;
    margin-bottom: 100px;
}

section.leaf {
    background-image: url('../img/leaves.png');
    background-repeat: repeat;
    background-size: 300px 300px;
    display: grid;
    place-items: center;
    margin-bottom: 100px;
}

nav {
    text-align: center;
    padding-top: 20px;
    padding-bottom: 5px;
    margin-bottom: 5px;
    background-color: #506b10;
    color: rgb(253, 236, 204);
    display: inline-block;
    width: 100%;
    align-items: center;
    overflow: hidden;
    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
}

nav a:link,
nav a:visited {
    color: rgb(253, 236, 204);
}

nav a:hover {
    color: rgb(248, 209, 33);
}

/* Navigation links */
nav a {
    float: center;
    font-size: 1.3em;
    color: rgb(253, 236, 204);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

/* The subnavigation menu */
.subnav {
    float: right;
    margin-right: 5%;
    overflow: hidden;
}

/* Subnav button */
.subnavbtn {
    font-size: 1.3em;
    border: none;
    outline: none;
    color: rgb(253, 236, 204);
    margin: 0;
}

/* Style the subnav content - positioned absolute */
.subnav-content {
    display: none;
    position: absolute;
    right: 0;
    background-color: #506b10;
    width: 100%;
    z-index: 1;
    float: right;
    padding: 5px;
}

/* Style the subnav links */
.subnav-content a {
    color: rgb(253, 236, 204);
    text-decoration: none;
    margin-top: 10px;
    margin-left: 0;
    margin-right: 0;
    font-size: 18px;
}

.subnavbtn:hover,
.subnav:hover .subnavbtn {
    color: rgb(248, 209, 33);
}

.subnav-content:hover {
    color: rgb(248, 209, 33);
}

h1 {
    text-align: center;
    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
    font-size: 3em;
    color: rgb(253, 236, 204);
    text-shadow: 4px 4px 0 #000, 2px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
    margin-top: 100px;
}

h2,
h3 {
    text-align: center;
    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
    color: black;
    margin-bottom: auto;
}

.center {
    margin: auto;
    text-align: center;
}

.italics {
    font-style: italic;
}

main {
    display: grid;
    grid-template-columns: 30% 35% 30%;
    place-items: center;
    margin-top: 100px;
    font-family: 'Josefin Sans', 'Lucida Sans', Verdana, sans-serif;
}

section.school img.left {
    display: inline-block;
    width: 100%;
    min-width: 150px;
    height: auto;
    vertical-align: middle;
}

section.school>main>a {
    display: inline-block;
    width: 60%;
}

section.school img.right {
    display: inline-block;
    width: 60%;
    min-width: 200px;
    height: auto;
    vertical-align: middle;
}

section.school p,
section.school div.box {
    vertical-align: top;
    display: inline-block;
    background-color: rgb(253, 236, 204);
    color: rgb(12, 12, 85);
    font-size: 24px;
    width: 75%;
    min-width: 200px;
    height: fit-content;
}

section.school div.box.intasc p {
    width: 95%;
    padding: 2%;
} 

section div.box {
    vertical-align: top;
    display: inline-block;
    background-color: rgb(253, 236, 204);
    color: rgb(12, 12, 85);
    font-size: 24px;
    width: 75%;
    min-width: 200px;
    height: fit-content;
    border-color: rgb(12, 97, 34);
    border-radius: 10px;
    border: 5px solid;
    border-style: double;
    padding: 20px;
    margin-top: 50px;
}

section.pine div.box p {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
}

blockquote.quote {
    text-align: center;
    font-family: 'Style Script';
    font-size: 32px;
}

blockquote.attrib {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 24px;
    text-align: right;
    margin-top: -10px;
}

